# Helios

./: .gitignore  CMakeLists.txt  Helios.sln  premake5.lua  win-build.bat
Helios/: Helios.vcxproj  Helios.vcxproj.filters
Helios/core/runtime/: entry-point.hpp
Helios/core/source-main/: engine.cpp
Helios/support/Glad/bin-int/Debug-windows-x86_64/Glad/Glad.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Glad.lastbuildstate  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
Helios/support/Glad/bin-int/Release-windows-x86_64/Glad/Glad.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Glad.lastbuildstate  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
Helios/support/imgui/: premake5.lua
Helios/support/imgui/backends/: imgui_impl_glfw.cpp
Sandbox/: Sandbox.vcxproj  Sandbox.vcxproj.filters
Sandbox/runtime/: sandbox.cpp
engine/: CMakeLists.txt
engine/asset/model/: cube.mtl
engine/asset/shader/: alisya_frag.glsl  alisya_vert.glsl  bunny_frag.glsl  bunny_vert.glsl  debug_quad_frag.glsl  deferred_lighting_frag.glsl  deferred_lighting_vert.glsl  expode_geom.glsl  framebuffer-vert.glsl  g_buffer_frag.glsl  g_buffer_vert.glsl  light_frag.glsl  light_vert.glsl  shadow_mapping_vert.glsl  simple_frag.glsl  simple_vert.glsl  skybox-frag.glsl  skybox-vert.glsl  ssao_blur_frag.glsl  ssao_blur_vert.glsl  ssao_frag.glsl  ssao_vert.glsl  test_frag.glsl  test_vert.glsl
engine/asset/shader/post-process/: blur-frag.glsl  edge-detection-frag.glsl  grayscale-frag.glsl  inversion-frag.glsl  kernel-frag.glsl
engine/source/editor/: CmakeLists.txt
engine/source/editor/source/: entry-point.cpp  entry_point.cpp
engine/source/runtime/: CmakeLists.txt  pre-compile.h
engine/source/runtime/engine/: CmakeLists.txt  engine.cpp  engine.hpp  q_mesh.cpp  q_mesh.hpp  q_model.cpp  q_model.hpp
engine/source/runtime/engine/core/: singleton.hpp  span.hpp  type.hpp  utility.hpp  window.cpp  window.hpp
engine/source/runtime/engine/core/global_context/: global_context.cpp  global_context.hpp
engine/source/runtime/engine/core/logger/: logger.cpp  logger.hpp  logger_marco.hpp
engine/source/runtime/engine/resource/: image.cpp  image.hpp
engine/source/runtime/engine/util/: math_func.hpp
engine/source/runtime/global_context/: global_context.cpp  global_context.hpp
engine/source/runtime/imgui_layer/: imgui_layer.cpp  imgui_layer.hpp
engine/source/runtime/import_assimp_model/: import_assimp_model.cpp  import_assimp_model.hpp
engine/source/runtime/input/: input_manager.cpp  input_manager.hpp
engine/source/runtime/logger/: logger.cpp  logger.hpp  logger_marco.hpp
engine/source/runtime/opengl_rhi/: adapter.hpp  opengl_buffer.cpp  opengl_buffer.hpp  opengl_draw_command.cpp  opengl_draw_command.hpp  opengl_framebuffer.cpp  opengl_framebuffer.hpp  opengl_gpu_program.cpp  opengl_gpu_program.hpp  opengl_pass.cpp  opengl_pass.hpp  opengl_render_queue.cpp  opengl_render_queue.hpp  opengl_resource.hpp  opengl_rhi.cpp  opengl_rhi.hpp  opengl_shader.cpp  opengl_shader.hpp  opengl_texture.cpp  opengl_texture.hpp  opengl_vertex_array.cpp  opengl_vertex_array.hpp
engine/source/runtime/render/: camera.cpp  camera.hpp
engine/source/runtime/rhi/: buffer.hpp  draw_command.hpp  pass.hpp  render_queue.hpp  render_state.hpp  rhi.cpp  rhi.hpp  rhi_defination.hpp  texture.hpp  vertex_array_spcifier.hpp
engine/source/runtime/window/: window.cpp  window.hpp
engine/support/: CMakeLists.txt  assimp.cmake  glad.cmake  imgui.cmake
engine/support/assimp/: CMakeLists.txt
engine/support/assimp/contrib/stb/: stb_image.h
